trunk/Archive2/15/ed96859d44c510/output
main.cpp: In function ‘int main()’:
main.cpp:14:5: error: ‘pris’ is not a member of ‘std’
     std::pris
     ^
main.cpp:15:5: error: expected ‘;’ before ‘ntf’
     ntf("Hexadecimal:\t%x %x %X %#x\n", 5, 10, 10, 6);
     ^
main.cpp:23:56: warning: division by zero [-Wdiv-by-zero]
     std::printf("Special values:\t0/0=%g 1/0=%g\n", 0./0, 1./0);
                                                        ^
main.cpp:23:62: warning: division by zero [-Wdiv-by-zero]
     std::printf("Special values:\t0/0=%g 1/0=%g\n", 0./0, 1./0);
                                                              ^
